# nbconvert

./: .flake8  .git-blame-ignore-revs  .gitignore  .mailmap  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  Untitled1.html  buildapi.py  check_requirements.py  codecov.yml  conftest.py  hatch_build.py  package.json  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  test_result.txt  tsconfig.json  webpack.config.js
.circleci/: config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: check-release.yml  docs.yml  prep-release.yml  publish-release.yml  python.yml  tests.yml
IPython/nbconvert/tests/: test_nbconvertapp.py
docs/: Makefile  README-DOCS.md  README.md  autogen_config.py  conda-env.yml  conda_env.yml  environment.yml  make.bat  requirements.txt
docs/api_examples/template_path/: make_html.py  quiz_notebook.py
docs/source/: Converting Notebooks With nbconvert.ipynb  Using nbconvert as a Library.ipynb  architecture.rst  changelog.rst  conf.py  customizing.ipynb  customizing.rst  dejavu.rst  development_release.rst  example-custom-metadata.html  example.html  example.ipynb  execute_api.rst  external_exporters.rst  highlighting.rst  index.rst  install.rst  latex_citations.rst  nbconvert_library.ipynb  nbconvert_library.rst  need_help.rst  removing_cells.rst  template_structure.html  usage.rst
docs/source/_static/: template_structure.html
docs/source/api/: exporters.rst  filters.rst  index.rst  nbconvertapp.rst  postprocessors.rst  preprocessors.rst  processors.rst  writers.rst
docs/sphinxext/: github.py
examples/Notebook/: Using nbconvert as a Library.ipynb
jupyter_nbconvert/: _version.py  nbconvertapp.py
jupyter_nbconvert/exporters/: export.py  exporter.py  html.py  latex.py  markdown.py  notebook.py  pdf.py  rst.py  slides.py  templateexporter.py
jupyter_nbconvert/exporters/tests/: test_export.py  test_latex.py  test_notebook.py  test_pdf.py  test_templateexporter.py
jupyter_nbconvert/filters/: ansi.py  highlight.py  markdown.py  markdown_mistune.py
jupyter_nbconvert/filters/tests/: test_ansi.py
jupyter_nbconvert/postprocessors/: serve.py
jupyter_nbconvert/preprocessors/: base.py  convertfigures.py  csshtmlheader.py  execute.py  highlightmagics.py  revealhelp.py
jupyter_nbconvert/preprocessors/tests/: test_execute.py
jupyter_nbconvert/tests/: base.py  test_nbconvertapp.py
jupyter_nbconvert/tests/files/: notebook2.ipynb
jupyter_nbconvert/utils/: coloransi.py  lexers.py  pandoc.py
jupyter_nbconvert/utils/tests/: test_pandoc.py
jupyter_nbconvert/writers/: files.py
jupyter_nbconvert/writers/tests/: test_files.py
nbconvert/: __init__.py  _version.py  _version_tools.py  conftest.py  nbconvertapp.py
nbconvert/exporters/: __init__.py  asciidoc.py  base.py  epub.py  export.py  exporter.py  exporter_locator.py  html.py  latex.py  markdown.py  notebook.py  pdf.py  python.py  qt_exporter.py  qt_screenshot.py  qtpdf.py  qtpng.py  rst.py  script.py  slides.py  templateexporter.py  webhtml.py  webpdf.py
nbconvert/exporters/tests/: base.py  cheese.py  test_asciidoc.py  test_base.py  test_export.py  test_exporter.py  test_html.py  test_latex.py  (+12 more)
nbconvert/filters/: __init__.py  ansi.py  citation.py  datatypefilter.py  filter_links.py  highlight.py  latex.py  markdown.py  markdown_mistune.py  pandoc.py  strings.py  svg_constants.py  widgetsdatatypefilter.py
nbconvert/postprocessors/: __init__.py  base.py  pack.py  serve.py
nbconvert/preprocessors/: __init__.py  base.py  clearmetadata.py  clearoutput.py  coalescestreams.py  convertfigures.py  csshtmlheader.py  execute.py  extractattachments.py  extractbase64images.py  extractoutput.py  highlightmagics.py  latex.py  numbered_headings.py  regexremove.py  removeempty.py  revealhelp.py  sanitize.py  snapshot.py  svg2pdf.py  tagremove.py
nbconvert/processors/: __init__.py  base.py  clearmetadata.py  clearoutput.py  coalescestreams.py  convertfigures.py  csshtmlheader.py  execute.py  extractoutput.py  highlightmagics.py  latex.py  regexremove.py  sanitize.py  svg2pdf.py  tagremove.py
nbconvert/sieves/: __init__.py  base.py  taginput.py
nbconvert/templates/: asciidoc.tpl  markdown.tpl  python.tpl  rst.tpl
nbconvert/tests/: base.py  fake_exporters.py  test_nbconvertapp.py  utils.py
nbconvert/utils/: .pandoc.py.swp  _contextlib_chdir.py  base.py  commands.py  exceptions.py  io.py  lexers.py  pandoc.py  text.py  version.py
nbconvert/writers/: base.py  debug.py  files.py  stdout.py
scripts/: jupyter-nbconvert
share/templates/: index_A4.tex.j2
src/: index.ts  loader.ts  manager.ts
templates/classic/: index.html.j2
tests/: base.py  test_nbconvertapp.py
tests/exporters/: base.py  cheese.py  test_asciidoc.py  test_export.py  test_exporter.py  test_html.py  test_latex.py  test_markdown.py  test_notebook.py  test_pdf.py  test_python.py  test_qtpdf.py  test_qtpng.py  test_rst.py  test_script.py  test_slides.py  test_templateexporter.py  test_webhtml.py  test_webpdf.py
tests/files/: Unexecuted_widget.ipynb  Unexecuted_widget_2.ipynb  Widget_List.ipynb  markdown_display_priority.ipynb  notebook1.ipynb  notebook2.ipynb  notebook3_with_errors.ipynb  notebook4_jpeg.ipynb  notebook6_physics_chemistry.ipynb
tests/filters/: test_ansi.py  test_citation.py  test_datatypefilter.py  test_highlight.py  test_latex.py  test_markdown.py  test_pandoc.py  test_strings.py
tests/postprocessors/: test_serve.py
tests/preprocessors/: base.py  test_clearmetadata.py  test_clearoutput.py  test_coalescestreams.py  test_csshtmlheader.py  test_execute.py  test_extractattachments.py  test_extractbase64images.py  test_extractoutput.py  test_highlightmagics.py  test_latex.py  test_numbered_headings.py  test_regexremove.py  test_sanitize.py  test_svg2pdf.py  test_tagremove.py
tests/utils/: test_io.py  test_pandoc.py  test_version.py
tests/writers/: test_debug.py  test_files.py  test_stdout.py
(+177 files in other folders)
