[build-system]
requires = ["hatchling >=0.25"]
build-backend = "hatchling.build"

[project]
name = "nbconvert"
authors = [{name = "Jupyter Development Team", email = "jupyter@googlegroups.com"}]
license = {file = "LICENSE"}
description = "Converting Jupyter Notebooks"
readme = "README.md"
keywords = ["Interactive", "Interpreter", "Shell", "Web"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
urls = {Homepage = "https://jupyter.org"}
requires-python = ">=3.7"
dependencies = [
    "beautifulsoup4",
    "bleach",
    "defusedxml",
    "importlib_metadata>=3.6;python_version<\"3.10\"",
    "jinja2>=3.0",
    "jupyter_core>=4.7",
    "jupyterlab_pygments",
    "MarkupSafe>=2.0",
    "mistune>=2.0.3,<3",
    "nbclient>=0.5.0",
    "nbformat>=5.1",
    "packaging",
    "pandocfilters>=1.4.1",
    "pygments>=2.4.1",
    "tinycss2",
    "traitlets>=5.0",
]
dynamic = ["version"]

[project.entry-points."nbconvert.exporters"]
custom = "nbconvert.exporters:TemplateExporter"
html = "nbconvert.exporters:HTMLExporter"
slides = "nbconvert.exporters:SlidesExporter"
latex = "nbconvert.exporters:LatexExporter"
pdf = "nbconvert.exporters:PDFExporter"
qtpdf = "nbconvert.exporters:QtPDFExporter"
qtpng = "nbconvert.exporters:QtPNGExporter"
webpdf = "nbconvert.exporters:WebPDFExporter"
markdown = "nbconvert.exporters:MarkdownExporter"
python = "nbconvert.exporters:PythonExporter"
rst = "nbconvert.exporters:RSTExporter"
notebook = "nbconvert.exporters:NotebookExporter"
asciidoc = "nbconvert.exporters:ASCIIDocExporter"
script = "nbconvert.exporters:ScriptExporter"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-dependency",
    "ipykernel",
    "ipywidgets>=7",
    "pre-commit",
    "pyppeteer>=1,<1.1",
]
serve = ["tornado>=6.1"]
qtpdf = ["pyqtwebengine>=5.15"]
qtpng = ["pyqtwebengine>=5.15"]
webpdf = ["pyppeteer>=1,<1.1"]
docs = [
    "myst_parser",
    "sphinx==5.0.2",
    "sphinx_rtd_theme",
    "nbsphinx>=0.2.12",
    "ipython",
]
all = [
    "ipykernel",
    "ipython",
    "ipywidgets>=7",
    "nbsphinx>=0.2.12",
    "myst_parser",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-dependency",
    "pyqtwebengine>=5.15",
    "pyppeteer>=1,<1.1",
    "sphinx==5.0.2",
    "sphinx_rtd_theme",
    "tornado>=6.1",
]

[project.scripts]
jupyter-nbconvert = "nbconvert.nbconvertapp:main"
jupyter-dejavu = "nbconvert.nbconvertapp:dejavu_main"

[tool.hatch.version]
path = "nbconvert/_version.py"

# Used to call hatch_build.py
[tool.hatch.build.hooks.custom]

[tool.hatch.build.targets.sdist]
artifacts = ["share/templates/lab/static/*.*"]

[tool.hatch.build.targets.wheel]
exclude = [
    "nbconvert/tests/",
    "nbconvert/**/tests/",
]

[tool.hatch.build.targets.wheel.shared-data]
"share/templates" = "share/jupyter/nbconvert/templates"

[tool.pytest.ini_options]
markers = "network: marks tests which require network connection"
addopts = "-raXs --durations 10 --color=yes --doctest-modules --ignore=nbconvert/tests/files/override.py --ignore=nbconvert/tests/files/jupyter_nbconvert_config.py"
testpaths = [
    "nbconvert/"
]
filterwarnings = [
    "error",
    "ignore:nbconvert.utils.lexers is deprecated as of 5.0:UserWarning",
    # Pending https://github.com/jupyter/nbformat/pull/256
    "ignore:Passing a schema to Validator.iter_errors is deprecated:DeprecationWarning",
    # https://github.com/pyppeteer/pyppeteer/issues/342
    "ignore:remove loop argument:DeprecationWarning:websockets",
    # https://github.com/mhammond/pywin32/issues/1802
    "ignore:getargs.*format is deprecated:DeprecationWarning",
    # From jupyter_client
    "ignore:unclosed <socket.socket:ResourceWarning",
    "ignore:unclosed event loop:ResourceWarning",
    "ignore:There is no current event loop:DeprecationWarning",
]

[tool.flake8]
ignore = "E501, W503, E402"
builtins = "c, get_config"
exclude = [
    ".cache",
    ".github",
    "docs",
]
enable-extensions = "G"
extend-ignore = [
    "G001", "G002", "G004", "G200", "G201", "G202",
    # black adds spaces around ':'
    "E203",
]
per-file-ignores = [
    # B011: Do not call assert False since python -O removes these calls
    # F841 local variable 'foo' is assigned to but never used
    "nbconvert/*/tests/*: B011", "F841",
    "nbconvert/tests/*: B011", "F841",
    # F401 'foo' imported but unused
    # F403 'x' used; unable to detect undefined names
    "nbconvert/*/__init__.py: F401", "F403",
    "nbconvert/__init__.py: F401", "F403",
]
