[bdist_wheel]
universal=0

[metadata]
license_file = LICENSE

[check-manifest]
ignore =
    nbconvert/resources/style.min.css
    .circleci/*

[tool:pytest]
markers =
    network: marks tests which require network connection

[flake8]
ignore = E121, # continuation line under-indented for hanging indent
         E123, # closing bracket does not match indentation of opening bracket's line
         E124, # closing bracket does not match visual indentation
         E126, # continuation line over-indented for hanging indent
         E127, # continuation line over-indented for visual indent
         E128, # continuation line under-indented for visual indent
         E201, # whitespace after '{'
         E202, # whitespace before '}'
         E203, # whitespace before ':'
         E221, # multiple spaces before operator
         E222, # multiple spaces after operator
         E225, # missing whitespace around operator
         E226, # missing whitespace around arithmetic operator
         E231, # missing whitespace after ','
         E241, # multiple spaces after '
         E251, # unexpected spaces around keyword / parameter equals
         E261, # at least two spaces before inline comment
         E265, # block comment should start with '# '
         E301, # expected 1 blank line, found 0
         E302, # expected 2 blank lines, found 1
         E303, # too many blank lines (2)
         E305, # expected 2 blank lines after class or function definition, found 1
         E306, # expected 1 blank line before a nested definition, found 0
         E501, # line too long (90 > 79 characters)
         F403, # 'from ... import *' used; unable to detect undefined names
         W291, # trailing whitespace
         W293, # blank line contains whitespace
         W391, # blank line at end of file
         W503, # line break before binary operator
         W504, # line break after binary operator
